added language descriptions

--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -51,25 +51,25 @@
 					<label class="hiddenHead" for="news-facebook"><h3>Facebook</h3></label>
 					<div class="hiddenBody">
 						<p>- <a href="https://www.facebook.com/AbayardeRojo.org">Abayarde Rojo</a></p>
-						<p>Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a></p>
+						<p>Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a> | Español</p>
 						<p>- <a href="https://www.facebook.com/bonitaradio">Bonita Radio</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://www.facebook.com/BiancaGraulau/">Bianca Graulau</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | English</p>
 						<p>- <a href="https://www.facebook.com/soyCarey/">Campamento Carey</a></p>
-						<p>Organization | Aguadilla</p>
+						<p>Organization | Aguadilla | Español</p>
 						<p>- <a href="https://www.facebook.com/groups/846922903243352/">Campamento Pelicano</a></p>
-						<p>Organization | Aguadilla</p>
+						<p>Organization | Aguadilla | Español</p>
 						<p>- <a href="https://www.facebook.com/eliezermolina2020">Eliezer Molina</a></p>
-						<p>Journalist | Aguadilla</p>
+						<p>Journalist | Aguadilla | Español</p>
 						<p>- <a href="https://www.facebook.com/elnuevodia">El Nuevo Día</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://www.facebook.com/people/Jos%C3%A9-Luis/100082926514357/">José Luis</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | Español</p>
 						<p>- <a href="https://www.facebook.com/LatinoRebels/">Latino Rebels</a></p>
-						<p>Media | International</p>
+						<p>Media | International | English</p>
 						<p>- <a href="https://www.facebook.com/power4puertorico/">Power For Puerto Rico</a></p>
-						<p>Organization | Nationwide</p>
+						<p>Organization | Nationwide | Español</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -77,23 +77,23 @@
 					<label class="hiddenHead" for="news-instagram"><h3>Instagram</h3></label>
 					<div class="hiddenBody">
 						<p>- <a href="https://www.instagram.com/AbayardeRojo/">Abayarde Rojo</a></p>
-						<p>Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a></p>
+						<p>Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a> | Español</p>
 						<p>- <a href="https://www.instagram.com/biancagraulau/">Bianca Graulau</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | English</p>
 						<p>- <a href="https://www.instagram.com/campamento.cemi.rincon/">Campamento Cemi Rincon</a></p>
-						<p>Organization | Aguadilla</p>
+						<p>Organization | Aguadilla | Español</p>
 						<p>- <a href="https://www.instagram.com/campamento_pelicano_aguadilla/">Campamento Pelicano</a></p>
-						<p>Organization | Aguadilla</p>
+						<p>Organization | Aguadilla | Español</p>
 						<p>- <a href="https://www.instagram.com/carlosberriospolanco/">Carlos Berrios Polanco</a></p>
-						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Links</a></p>
+						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Links</a> | English</p>
 						<p>- <a href="https://www.instagram.com/eliezermolinapr/">Eliezer Molinapr</a></p>
-						<p>Journalist | Aguadilla</p>
+						<p>Journalist | Aguadilla | Español</p>
 						<p>- <a href="https://www.instagram.com/elnuevodia/">El Nuevo Día</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://www.instagram.com/notijuan/">Juan R. Costa</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | Español, English</p>
 						<p>- <a href="https://www.instagram.com/latinorebels/">Latino Rebels</a></p>
-						<p>Media | International</p>
+						<p>Media | International | English</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -101,9 +101,9 @@
 					<label class="hiddenHead" for="news-mastodon"><h3>Mastodon</h3></label>
 					<div class="hiddenBody">
 						<p>- <a href="https://kolektiva.social/@midnucas">Midnucas</a></p>
-						<p>Personality | Nationwide</p>
+						<p>Personality | Nationwide | English</p>
 						<p>- <a href="https://kolektiva.social/@W4Weird">Wired 4 Weird</a></p>
-						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Link</a></p>
+						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Link</a> | English</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -111,7 +111,7 @@
 					<label class="hiddenHead" for="news-tiktok"><h3>TikTok</h3></label>
 					<div class="hiddenBody">
 						<p>- <a href="https://www.tiktok.com/@biancagraulau">Bianca Graulau</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | English</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -119,7 +119,7 @@
 					<label class="hiddenHead" for="news-tumblr"><h3>Tumblr</h3></label>
 					<div class="hiddenBody">
 						<p>- <a href="https://latinorebels.tumblr.com/">Latino Rebels</a></p>
-						<p>Media | International</p>
+						<p>Media | International | English</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -127,39 +127,39 @@
 					<label class="hiddenHead" for="news-twitter"><h3>Twitter</h3></label>
 					<div class="hiddenBody">
 						<p>- <a href="https://twitter.com/Bonita_Radio">Bonita Radio</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://twitter.com/Vaquero2XL">Carlos Berrios Polanco</a></p>
-						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Link</a></p>
+						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Link</a> | English</p>
 						<p><a href="https://twitter.com/deviIette">DeviIette</a></p>
-						<p>Personality | Nationwide</p>
+						<p>Personality | Nationwide | Español, English</p>
 						<p>- <a href="https://twitter.com/eliezermolinapr">Eliezer Molinapr</a></p>
-						<p>Journalist | Aguadilla</p>
+						<p>Journalist | Aguadilla | Español</p>
 						<p>- <a href="https://twitter.com/elnuevodia">El Nuevo Día</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://twitter.com/JoseADelgadoEND">José A. Delgado</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | Español, English</p>
 						<p>- <a href="https://twitter.com/NotiJuan">Juan R. Costa</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | Español, English</p>
 						<p>- <a href="https://twitter.com/latinorebels">Latino Rebels</a></p>
-						<p>Media | International</p>
+						<p>Media | International | English</p>
 						<p>- <a href="https://twitter.com/elleonfiscaliz1">León Fiscalizador</a></p>
-						<p>Journalist | Aguadilla</p>
+						<p>Journalist | Aguadilla | Español</p>
 						<p>- <a href="https://twitter.com/MareaEcologista">Marea Ecologista</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://twitter.com/MarcosPerezRam">Marcos Perez Ram</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | Español</p>
 						<p>- <a href="https://twitter.com/midnucas">Midnucas</a></p>
-						<p>Personality | Nationwide</p>
+						<p>Personality | Nationwide | English</p>
 						<p>- <a href="https://twitter.com/noticel">NotiCel</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://twitter.com/PalabraLibrePR">Palabra Libre</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://twitter.com/ElPodcastPPP">Puestos Pa'l Problema</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://twitter.com/RobiCamacho">Robinson Camacho Rodríguez</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | Español</p>
 						<p>- <a href="https://twitter.com/SRCSandra">Sandra Rodríguez Cotto</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | Español</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -167,25 +167,25 @@
 					<label class="hiddenHead" for="news-websites"><h3>Websites</h3></label>
 					<div class="hiddenBody">
 						<p>- <a href="https://abayarderojo.org/">Abayarde Rojo</a> (Organization)</p>
-						<p>Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a></p>
+						<p>Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a> | Español</p>
 						<p>- <a href="https://www.bonitaradio.net/">Bonita Radio</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://carlosberriospolanco.wordpress.com/">Carlos Berríos Polanco</a></p>
-						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Link</a></p>
+						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Link</a> | English</p>
 						<p>- <a href="https://covid-19-puerto-rico.org/2023-02-06/index.html">Covid-19 Puerto Rico</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://www.elnuevodia.com/">El Nuevo Día</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://enblancoynegromedia.blogspot.com/">En Blanco y Negro con Sandra</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | Español</p>
 						<p>- <a href="https://www.latinorebels.com/">Latino Rebels</a></p>
-						<p>Media | International</p>
+						<p>Media | International | Español, English</p>
 						<p>- <a href="https://mareaecologista.com/">Marea Ecologista</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://www.noticel.com/">NotiCel</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://medium.com/@robinson.camacho">Robinson Camacho Rodríguez</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | Español</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -193,15 +193,15 @@
 					<label class="hiddenHead" for="news-youtube"><h3>Youtube</h3></label>
 					<div class="hiddenBody">
 						<p>- <a href="https://www.youtube.com/c/BiancaGraulau">Bianca Graulau</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | English</p>
 						<p>- <a href="https://www.youtube.com/@biancagraulaupr">Bianca Graulau Español</a></p>
-						<p>Journalist | Nationwide</p>
+						<p>Journalist | Nationwide | Español</p>
 						<p>- <a href="https://www.youtube.com/c/BonitaRadio">Bonita Radio</a></p>
-						<p>Media | Nationwide</p>
+						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://www.youtube.com/c/LatinoRebels">Latino Rebels</a></p>
-						<p>Media | International</p>
+						<p>Media | International | English</p>
 						<p>- <a href="https://www.youtube.com/channel/UCMtsOwe5ZBl69uMxapbHSqw">Wired for Weird</a></p>
-						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm"></a></p>
+						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm"></a> | English</p>
 					</div>
 				</div>
 			</div>
