--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -130,7 +130,7 @@
 						<p>Media | Nationwide | Español</p>
 						<p>- <a href="https://twitter.com/Vaquero2XL">Carlos Berrios Polanco</a></p>
 						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Link</a> | English</p>
-						<p><a href="https://twitter.com/deviIette">DeviIette</a></p>
+						<p>- <a href="https://twitter.com/deviIette">DeviIette</a></p>
 						<p>Personality | Nationwide | Español, English</p>
 						<p>- <a href="https://twitter.com/eliezermolinapr">Eliezer Molinapr</a></p>
 						<p>Journalist | Aguadilla | Español</p>
@@ -166,7 +166,7 @@
 					<input type="checkbox" id="news-websites" class="hiddenToggle">
 					<label class="hiddenHead" for="news-websites"><h3>Websites</h3></label>
 					<div class="hiddenBody">
-						<p>- <a href="https://abayarderojo.org/">Abayarde Rojo</a> (Organization)</p>
+						<p>- <a href="https://abayarderojo.org/">Abayarde Rojo</a></p>
 						<p>Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a> | Español</p>
 						<p>- <a href="https://www.bonitaradio.net/">Bonita Radio</a></p>
 						<p>Media | Nationwide | Español</p>
