--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
- 	<head>
+	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/x-icon" href="/assets/icon.ico">
 		<title>W E L C O M E</title>
 		<meta content="The People's Land of Learning" property="og:title"/>
-		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
+		<meta content="An educational resource for Anti-Colonial Marxist Leninist theory" property="og:description"/>
 		<meta content="https://peopleslandoflearning.github.io/" property="og:url"/>
 		<meta content="/assets/icon.png" property="og:image"/>
 		<meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
-  	</head>
- 	<body>
+	</head>
+	<body>
 		<header>
 			<a href="/" id="title"><h1>The People's Land of Learning</h1></a>
-			<p>An educational resource for Anti-Colonial Marxist Leninist and Feminist theory.</p>
+			<p>An educational resource for Anti-Colonial Marxist Leninist theory.</p>
 			<div id="buttonMenu">
 				<a class="button" href="/pages/dictionary"><p>DICTIONARY</p></a>
 				<a class="button" href="/pages/contact"><p>FEEDBACK</p></a>
@@ -27,12 +27,6 @@
 			<h3 id="temp">THIS IS VERY MUCH A WORK IN PROGRESS</h3>
 			<p class="quote">"To politicize the masses is not and cannot be to make a political speech. It means driving home to the masses that everything depends on them, that if we stagnate the fault is theirs, and that if we progress, they too are responsible, that there is no demiurge, no illustrious man taking responsibility for everything, but that the demiurge is the people and the magic lies in their hands and their hands alone."</p>
 			<p>- Frantz Fanon, The Wretched of The Earth</p>
-			<!-- Topic adding template
-			<div class="textGroup">
-				<a href=""><h3>Category</h3></a>
-				<p>Subtitle</p>
-			</div>
-			-->
 			<div class="textGroup">
 				<h3>Theory Guides</h3>
 				<a href="/pages/guides/colonialism"><p>Colonialism and Imperialism</p></a>
@@ -57,5 +51,5 @@
 			<p>Discord server: <a href="https://discord.gg/hQ3XxjrfmF">https://discord.gg/hQ3XxjrfmF</a></p>
 			<p>Email address: <a href="mailto:peopleslandoflearning@protonmail.com">peopleslandoflearning@protonmail.com</a></p>
 		</footer>
-  	</body>
+	</body>
 </html>
