--- a/pages/dictionary.html
+++ b/pages/dictionary.html
@@ -102,10 +102,10 @@
 				<h2>Lumpenproletariat</h2>
 				<p>The class that is degraded and downtrodden upon within industrial sectors, including those who are frequently unemployed, houseless, prostitutes, etc. Historically served as a part of fascist movements during times of struggle under capitalism. See Fascism.</p>
 			</div>
-			<div class="textGroup">
-				<h2>Maoism</h2>
-				<p>Synonymous with Mao Zedong Thought. A theory advanced from Marxism, originally made to critique the Soviet Union for its problems. This branch of thought focuses on improving the material conditions of the people before introducing socialism as well as understanding contradictions to be the crux of society. See Marxism, "Araling Aktibista".</p>
-			</div>
+			<!--<div class="textGroup">
+				<h2>Mao Zedong Thought</h2>
+				<p>A theory advanced from Marxism, originally made to critique the Soviet Union for its problems. This branch of thought focuses on improving the material conditions of the people before introducing socialism as well as understanding contradictions to be the crux of society. See Marxism, "Araling Aktibista".</p>
+			</div>-->
 			<div class="textGroup">
 				<h2>Marxism</h2>
 				<p>A comprehensive revolutionary ideology which seeks guide the working class into building communism. As such, it is comprised of three parts: Dialectical Materialism, Political Economy, and the application of these two into the development of Socialism. See Communism, Dialectical Materialism, Proletariat, Socialism, “The Three Sources and Three Component Parts of Marxism“.</p>
