website submission time

--- a/pages/external_resources/news.html
+++ b/pages/external_resources/news.html
@@ -35,6 +35,16 @@
 				</div>
 			</div>
 			<div class="hidden">
+				<input type="checkbox" id="china" class="hiddenToggle">
+				<label class="hiddenHead" for="world"><h2>China</h2></label>
+				<div class="hiddenBody">
+					<p><a href="https://www.globaltimes.cn/">Global Times</a></p>
+					<p><a href="https://english.huanqiu.com/">Huanqiu</a></p>
+					<p><a href="http://en.people.cn/">People's Daily</a></p>
+					<p><a href="https://english.news.cn/">Xinhua Net</a> (<a href="https://english.news.cn/rss/">rss</a>)</p>
+				</div>
+			</div>
+			<div class="hidden">
 				<input type="checkbox" id="latin-america" class="hiddenToggle">
 				<label class="hiddenHead" for="latin-america"><h2>Latin America</h2></label>
 				<div class="hiddenBody">
