switched library and previous site indices, now the library is the forefront of the website B)

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 			<div id="buttonMenu">
 				<a class="button" href="/pages/dictionary"><p>DICTIONARY</p></a>
 				<a class="button" href="/pages/contact"><p>FEEDBACK</p></a>
-				<a class="button" href="/pages/library/index"><p>LIBRARY</p></a>
+				<a class="button" href="/pages/guides/index"><p>GUIDES</p></a>
 			</div>
 			<hr/>
 		</header>
 		<div class="container">
-			<h3 id="temp">THIS IS VERY MUCH A WORK IN PROGRESS</h3>
+			<h2 id="temp">THIS IS VERY MUCH A WORK IN PROGRESS</h2>
 			<p class="quote">"To politicize the masses is not and cannot be to make a political speech. It means driving home to the masses that everything depends on them, that if we stagnate the fault is theirs, and that if we progress, they too are responsible, that there is no demiurge, no illustrious man taking responsibility for everything, but that the demiurge is the people and the magic lies in their hands and their hands alone."</p>
 			<p>- Frantz Fanon, The Wretched of The Earth</p>
 			<div class="textGroup">
