oopsies. this should fix it

--- a/index.html
+++ b/index.html
@@ -24,26 +24,20 @@
 			<hr/>
 		</header>
 		<div class="container">
-			<h2 id="temp">THIS IS VERY MUCH A WORK IN PROGRESS</h2>
-			<p class="quote">"To politicize the masses is not and cannot be to make a political speech. It means driving home to the masses that everything depends on them, that if we stagnate the fault is theirs, and that if we progress, they too are responsible, that there is no demiurge, no illustrious man taking responsibility for everything, but that the demiurge is the people and the magic lies in their hands and their hands alone."</p>
-			<p>- Frantz Fanon, The Wretched of The Earth</p>
-			<div class="textGroup">
-				<h3>Theory Guides</h3>
-				<a href="/pages/guides/colonialism"><p>Colonialism and Imperialism</p></a>
-				<a href="/pages/guides/disability_neurodivergence"><p>Disability and Neurodivergence</p></a>
-				<a href="/pages/guides/feminism_gender"><p>Feminism and Gender Liberation</p></a>
-				<a href="/pages/guides/nationhood"><p>Indigeneity and Nationhood</p></a>
-				<a href="/pages/guides/base_theory"><p>Introductory Marxist Theory</p></a>
-				<a href="/pages/guides/organizing"><p>Organizing</p></a>
-				<a href="/pages/guides/security"><p>Security</p></a>
-			</div>
-			<div class="textGroup">
-				<h3>Specific Topics</h3>
-				<a href="/pages/topics/indonesia"><p>Indonesia</p></a>
-				<a href="/pages/topics/puerto_rico"><p>Puerto Rico</p></a>
-				<a href="/pages/topics/dprk"><p>The DRPK</p></a>
-				<a href="/pages/topics/ussettler"><p>The US as a Settler Empire</p></a>
-			</div>
+			  <p>If you have any resource requests or suggestions feel free to send us them on our <a href="https://discord.gg/hQ3XxjrfmF">discord server</a> or on <a href="https://github.com/peopleslandoflearning/peopleslandoflearning.github.io/issues/new">github issues</a> with the label "resource expansion".
+			      <div class="textGroup">
+				        <a href="audio"><h2>Audio</h2></a>
+				        <p>Audio content by anti-capitalist groups and individuals.</p>
+			      </div>
+			      <div class="textGroup">
+				        <a href="texts"><h2>Texts</h2></a>
+				        <p>A table of books and articles from a vast array of authors.</p>
+			      </div>
+			      <div class="textGroup">
+				        <a href="videos"><h2>Videos</h2></a>
+				        <p>A table of various socialist documentaries and videos.</p>
+			      </div>
+			      <hr/>
 		</div>
 		<footer>
 			<hr/>
