--- a/index.html
+++ b/index.html
@@ -19,26 +19,42 @@
 			<div id="buttonMenu">
 				<a class="button" href="/pages/dictionary"><p>DICTIONARY</p></a>
 				<a class="button" href="/pages/contact"><p>FEEDBACK</p></a>
-				<a class="button" href="/pages/guides/index"><p>GUIDES</p></a>
+				<a class="button" href="/pages/guides/index"><p>LIBRARY</p></a>
 			</div>
 			<hr/>
 		</header>
 		<div class="container">
-			  <p>If you have any resource requests or suggestions feel free to send us them on our <a href="https://discord.gg/hQ3XxjrfmF">discord server</a> or on <a href="https://github.com/peopleslandoflearning/peopleslandoflearning.github.io/issues/new">github issues</a> with the label "resource expansion".
-			      <div class="textGroup">
-				        <a href="audio"><h2>Audio</h2></a>
-				        <p>Audio content by anti-capitalist groups and individuals.</p>
-			      </div>
-			      <div class="textGroup">
-				        <a href="texts"><h2>Texts</h2></a>
-				        <p>A table of books and articles from a vast array of authors.</p>
-			      </div>
-			      <div class="textGroup">
-				        <a href="videos"><h2>Videos</h2></a>
-				        <p>A table of various socialist documentaries and videos.</p>
-			      </div>
-			      <hr/>
-		</div>
+			<h3 id="temp">THIS IS VERY MUCH A WORK IN PROGRESS</h3>
+			<p class="quote">"To politicize the masses is not and cannot be to make a political speech. It means driving home to the masses that everything depends on them, that if we stagnate the fault is theirs, and that if we progress, they too are responsible, that there is no demiurge, no illustrious man taking responsibility for everything, but that the demiurge is the people and the magic lies in their hands and their hands alone."</p>
+			<p>- Frantz Fanon, The Wretched of The Earth</p>
+      <div class="container">
+            <p>If you have any resource requests or suggestions feel free to send us them on our <a href="https://discord.gg/hQ3XxjrfmF">discord server</a> or on <a href="https://github.com/peopleslandoflearning/peopleslandoflearning.github.io/issues/new">github issues</a> with the label "resource expansion".
+            <div class="textGroup">
+                <a href="audio"><h2>Audio</h2></a>
+                <p>Audio content by anti-capitalist groups and individuals.</p>
+            </div>
+            <div class="textGroup">
+                <a href="texts"><h2>Texts</h2></a>
+                <p>A table of books and articles from a vast array of authors.</p>
+            </div>
+            <div class="textGroup">
+                <a href="videos"><h2>Videos</h2></a>
+                <p>A table of various socialist documentaries and videos.</p>
+            </div>
+            <hr/>
+        </div>
+        <div class="container">
+            <p>The latter two links are resources from other websites or from social media.
+            <div class="textGroup">
+                <a href="../external_resources/index"><h2>External Resources and Websites</h2></a>
+                <p>Sources for books and other resources outside of our own website.</p>
+            </div>
+            <div class="textGroup">
+                <a href="youtube"><h2>Youtube Channels</h2></a>
+                <p>Video content by anti-capitalist groups and individuals.</p>
+            </div>
+        </div>
+	  </div>
 		<footer>
 			<hr/>
 			<h4>Contacts</h4>
