double oops. fixed links and readded External Websites

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
       <div class="container">
             <p>If you have any resource requests or suggestions feel free to send us them on our <a href="https://discord.gg/hQ3XxjrfmF">discord server</a> or on <a href="https://github.com/peopleslandoflearning/peopleslandoflearning.github.io/issues/new">github issues</a> with the label "resource expansion".
             <div class="textGroup">
-                <a href="audio"><h2>Audio</h2></a>
+                <a href="pages/library/audio"><h2>Audio</h2></a>
                 <p>Audio content by anti-capitalist groups and individuals.</p>
             </div>
             <div class="textGroup">
-                <a href="texts"><h2>Texts</h2></a>
+                <a href="pages/library/texts"><h2>Texts</h2></a>
                 <p>A table of books and articles from a vast array of authors.</p>
             </div>
             <div class="textGroup">
-                <a href="videos"><h2>Videos</h2></a>
+                <a href="pages/library/videos"><h2>Videos</h2></a>
                 <p>A table of various socialist documentaries and videos.</p>
             </div>
             <hr/>
@@ -46,11 +46,11 @@
         <div class="container">
             <p>The latter two links are resources from other websites or from social media.
             <div class="textGroup">
-                <a href="../external_resources/index"><h2>External Resources and Websites</h2></a>
+                <a href="external_resources/index"><h2>External Resources and Websites</h2></a>
                 <p>Sources for books and other resources outside of our own website.</p>
             </div>
             <div class="textGroup">
-                <a href="youtube"><h2>Youtube Channels</h2></a>
+                <a href="pages/library/youtube"><h2>Youtube Channels</h2></a>
                 <p>Video content by anti-capitalist groups and individuals.</p>
             </div>
         </div>
