OK THIS IS THE LAST TIME

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div id="buttonMenu">
 				<a class="button" href="/pages/dictionary"><p>DICTIONARY</p></a>
 				<a class="button" href="/pages/contact"><p>FEEDBACK</p></a>
-				<a class="button" href="/pages/guides/index"><p>LIBRARY</p></a>
+				<a class="button" href="/pages/guides/index"><p>GUIDES</p></a>
 			</div>
 			<hr/>
 		</header>
