ok this is the last one

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</header>
 		<div class="container">
 			<h3 id="temp">THIS IS VERY MUCH A WORK IN PROGRESS</h3>
-			<p class="quote">"To politicize the masses is not and cannot be to make a political speech. It means driving home to the masses that everything depends on them, that if we stagnate the fault is theirs, and that if we progress, they too are responsible, that there is no demiurge, no illustrious man taking responsibility for everything, but that the demiurge is the people and the magic lies in their hands and their hands alone."</p>
+			<blockquote cite="https://library.memoryoftheworld.org/#/book/ab44920b-46f0-4b94-963f-fcf76323fc7c">"To politicize the masses is not and cannot be to make a political speech. It means driving home to the masses that everything depends on them, that if we stagnate the fault is theirs, and that if we progress, they too are responsible, that there is no demiurge, no illustrious man taking responsibility for everything, but that the demiurge is the people and the magic lies in their hands and their hands alone."</blockquote>
 			<p>- Frantz Fanon, The Wretched of The Earth</p>
       <div class="container">
             <p>If you have any resource requests or suggestions feel free to send us them on our <a href="https://discord.gg/hQ3XxjrfmF">discord server</a> or on <a href="https://github.com/peopleslandoflearning/peopleslandoflearning.github.io/issues/new">github issues</a> with the label "resource expansion".
@@ -46,7 +46,7 @@
         <div class="container">
             <p>The latter two links are resources from other websites or from social media.
             <div class="textGroup">
-                <a href="external_resources/index"><h2>External Resources and Websites</h2></a>
+                <a href="pages/external_resources/index"><h2>External Resources and Websites</h2></a>
                 <p>Sources for books and other resources outside of our own website.</p>
             </div>
             <div class="textGroup">
