a smaller website submission

--- a/pages/external_resources/news.html
+++ b/pages/external_resources/news.html
@@ -39,6 +39,7 @@
 				<label class="hiddenHead" for="world"><h2>China</h2></label>
 				<div class="hiddenBody">
 					<p><a href="https://www.globaltimes.cn/">Global Times</a></p>
+          <p><a href-"http://www.hprc.org.cn/">History of the People's Republic of China</a> (Chinese)</p>
 					<p><a href="https://english.huanqiu.com/">Huanqiu</a></p>
 					<p><a href="http://en.people.cn/">People's Daily</a></p>
 					<p><a href="https://english.news.cn/">Xinhua Net</a> (<a href="https://english.news.cn/rss/">rss</a>)</p>
