horray! more texts! ::)

--- a/pages/dictionary.html
+++ b/pages/dictionary.html
@@ -59,6 +59,11 @@
 				<p>A society in which both class and the state have been abolished. See Socialism, “Principles of Communism“.</p>
 			</div>
 			<div class="textGroup">
+				<h2>Cultural Imperialism</h2>
+				<p>Cultural imperialism is the set of ideas, concepts and agencies used to structure the behavior of a people in accordance with the will of the oppressor/imperial culture. It is also the creation and maintenance of unequal relationships between civilizations, favoring the culture of the more economically powerful civilization.</p>
+				<p>In the media and online, cultural imperialism still means powerful cultures so "generously" sharing their ways with smaller less powerful places around the world, in which the members of imperialized cultures forsake their traditional values and even lose their cultural identities when they are solely exposed to Western media. See Colonialism, Imperialism, the Colonialism/Imperialism Guide.</p>
+			</div>
+			<div class="textGroup">
 				<h2>Dialectical Materialism</h2>
 				<p>A fusion of both Hegel’s dialectics and Feuerbach’s materialism, it understands reality to be purely a physical one, in which consciousness (thoughts, emotions, etc) is an extension developed from matter. Since matter is always changing, this dialectical view is prevalent within nature. See Dialectics, “What is Dialectical Materialism?“</p>
 			</div>
