--- a/pages/external_resources/news.html
+++ b/pages/external_resources/news.html
@@ -61,6 +61,7 @@
 					<p><a href="https://healthliberationnow.com/">Health Liberation Now</a> (<a href="https://healthliberationnow.com/feed/">rss</a>)</p>
 					<p><a href="https://hoodcommunist.org/">Hood Communist</a> (<a href="https://hoodcommunist.org/rss/">rss</a>)</p>
 					<p><a href="https://itsgoingdown.org/">It’s Going Down</a> (<a href="https://itsgoingdown.org/feed/">rss</a>)</p>
+					<p><a href="https://nativenewsonline.net/">Native News Online</a></p>
 					<p><a href="https://unicornriot.ninja/">Unicorn Riot</a> (<a href="https://unicornriot.ninja/feed/rss/">rss</a>)</p>
 					<p><a href="https://www.workers.org/">Workers World</a> (<a href="https://www.workers.org/feed/">rss</a>)</p>
 				</div>
